--- a/css/layout/header.css
+++ b/css/layout/header.css
@@ -85,14 +85,14 @@
   position: fixed;
   top: 0;
   left: 0;
-  min-height: 500px;
-  width: 100%;
+  height: 100%;
+  min-width: 100%;
+  justify-content: space-between;
   display: flex;
   flex-direction: column;
   align-items: start;
   background-color: #1e1823;
   z-index: 999;
-  gap: 230px;
   padding: 136px 20px 20px;
   transition: transform 500ms linear;
   transform: translate(100%, 100%);
@@ -137,8 +137,8 @@
   background-color: transparent;
   line-height: 0;
   position: absolute;
-  right: 50px;
   top: 20px;
+  right: 20px;
 }
 @media screen and (min-width: 768px) {
   .mobail-menu {
