--- a/css/layout/selers.css
+++ b/css/layout/selers.css
@@ -34,7 +34,7 @@
   overflow: hidden;
 }
 .selers-paragraph {
-  width: 295px;
+  width: 100%;
   color: #fafafa;
   font-family: Montserrat;
   font-size: 14px;
