--- a/css/layout/header.css
+++ b/css/layout/header.css
@@ -64,6 +64,7 @@
     line-height: 1.5;
     letter-spacing: -0.02em;
     text-decoration: none;
+    transition: color 250ms ease-in-out, font-size 250ms ease-out;
   }
   .header-add-link {
     display: flex;
@@ -73,6 +74,17 @@
     width: 40px;
     border-radius: 10px;
     border: 1px solid rgba(17, 17, 17, 0.1);
+    transition: fill 250ms ease-in-out, border-color 250ms ease-in-out;
+  }
+  .header-hav-link:hover,
+  .header-hav-link:focus {
+    color: #fd9222;
+    font-size: 16px;
+  }
+  .header-add-link:focus,
+  .header-add-link:hover {
+    fill: #fd9222;
+    border-color: #fd9222;
   }
 }
 @media screen and (min-width: 1158px) {
@@ -84,9 +96,9 @@
 .mobail-menu {
   position: fixed;
   top: 0;
-  left: 0;
+  right: 0;
   height: 100%;
-  min-width: 100%;
+  width: 270px;
   justify-content: space-between;
   display: flex;
   flex-direction: column;
